@@ -67,6 +67,7 @@ $specialPageAliases = array(
 	'Preferences'               => array( '参数设置' ),
 	'Watchlist'                 => array( '监视列表' ),
 	'Recentchanges'             => array( '最近更改' ),
+	'Recentchangeslinked'       => array( '链出更改' ),
 	'Upload'                    => array( '上传文件' ),
 	'Listfiles'                 => array( '文件列表' ),
 	'Newimages'                 => array( '新建文件' ),
@@ -79,7 +80,7 @@ $specialPageAliases = array(
 	'Uncategorizedcategories'   => array( '未归类分类' ),
 	'Uncategorizedimages'       => array( '未归类文件' ),
 	'Uncategorizedtemplates'    => array( '未归类模版' ),
-	'Unusedcategories'          => array( '未使用的模板' ),
+	'Unusedcategories'          => array( '未使用分类' ),
 	'Unusedimages'              => array( '未使用文件' ),
 	'Wantedpages'               => array( '待撰页面' ),
 	'Wantedcategories'          => array( '待撰分类' ),
